<resources>
    <string name="app_name">TrabajoPractico3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Carry</string>
    <string name="menu_slideshow">List</string>
    <string name="menu_leave">Leave</string>
    <string name="title2">Lista de Notas</string>

    <string name="title">Trabajo Practico<font color='#FF000000'>Numero 3</font></string>
    <string name="teacher">Profesor: Luis Javier Mercado</string>
    <string name="student">Alumno: Fermin Orlando Fernandez</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>