<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fermin2049.trabajopractico3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_carry"
        android:name="com.fermin2049.trabajopractico3.ui.carry.CarryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_carry" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.fermin2049.trabajopractico3.ui.List.ListFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/nav_leave"
        android:name="com.fermin2049.trabajopractico3.ui.Leave.LeaveFragment"
        android:label="@string/menu_leave"
        tools:layout="@layout/fragment_leave" />

</navigation>