<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            app:iconTint="@null"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_carry"
            android:icon="@drawable/carry"
            app:iconTint="@null"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/list"
            app:iconTint="@null"
            android:title="@string/menu_slideshow" />
    </group>
</menu>